# packt

./: .gitignore  .rustfmt.toml  Cargo.toml  build-windows.sh  find-parameters  test-script.fish
.cargo/: config
packt-core/: Cargo.toml
packt-core/src/: domain.rs  geometry.rs  lib.rs  problem.rs  runner.rs  solution.rs
packt-core/src/domain/: mod.rs  problem.rs  solution.rs
packt-gtk/: Cargo.toml  build-windows.sh
packt-gtk/src/: main.rs  packt.glade  view.rs
packt-gtk/src/view/: generator.rs  mod.rs  workspace.rs
packt-gui/: Cargo.toml
packt-gui/src/: main.rs  packt.glade  view.rs
testcases/: 5k-norot-fixed-cli.txt  5k-norot-fixed-packt.txt  5k-norot-free-cli.txt  5k-norot-free-packt.txt  5k-rot-fixed-cli.txt  5k-rot-fixed-packt.txt  5k-rot-free-cli.txt  5k-rot-free-packt.txt
testcases/optimal/: 03_01_packt.txt  03_02_packt.txt  03_03_packt.txt  03_04_packt.txt  05_01_packt.txt  05_02_packt.txt  05_03_packt.txt  05_04_packt.txt  10_01_packt.txt  10_02_packt.txt  10_03_packt.txt  10_04_packt.txt
