[package]
authors = ["frank"]
name = "packt-core"
version = "0.1.0"

[dependencies]
tokio-process = "0.1.6"
tokio = "0.1.6"
tokio-io = "0.1.6"
tokio-core = "0.1.17"
failure = "0.1.1"
crossbeam-channel = "0.1.2"
rand = "0.4.2"
quicli = "0.3.0"
log = "0.4.3"
itertools = "0.7.8"
csv = "1.0.0"
serde = "1.0.69"
serde_derive = "1.0.69"

[[bin]]
name = "packt-generate"
path = "src/bin/generator.rs"

[[bin]]
name = "packt-solve"
path = "src/bin/solver.rs"
