[package]
name = "packt-gtk"
version = "0.1.0"
authors = ["frank"]

[dependencies]
relm = "0.14.4"
relm-derive = "0.14.4"
gtk = {version="0.4.1", features = ["v3_10"]}
packt-core = { path = "../packt-core" }
tokio-process = "0.1.6"
tokio = "0.1.6"
tokio-io = "0.1.6"
tokio-core = "0.1.17"
failure = "0.1.1"
crossbeam-channel = "0.1.2"
